// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a currency logo with network logo 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "height": 20,
        "justifyContent": "center",
        "width": 20,
      },
    ]
  }
>
  <Image
    source={
      Object {
        "uri": "https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x1f9840a85d5aF5bf1D1762F925BDADdC4201F984/logo.png",
      }
    }
    style={
      Array [
        Object {
          "resizeMode": "contain",
        },
        Object {
          "backgroundColor": "#D2D9EE",
          "borderColor": "#D2D9EE",
          "borderRadius": 10,
          "borderWidth": 0.5,
          "height": 20,
          "width": 20,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "bottom": 0,
          "display": "flex",
          "position": "absolute",
          "right": 0,
          "shadowColor": "#000000",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 2,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "borderRadius": 999999,
            "borderWidth": 0,
            "display": "flex",
          },
          Object {
            "borderColor": "#515EDC",
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`renders a currency logo without network logo 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "height": 20,
        "justifyContent": "center",
        "width": 20,
      },
    ]
  }
>
  <Image
    source={
      Object {
        "uri": "https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x1f9840a85d5aF5bf1D1762F925BDADdC4201F984/logo.png",
      }
    }
    style={
      Array [
        Object {
          "resizeMode": "contain",
        },
        Object {
          "backgroundColor": "#D2D9EE",
          "borderColor": "#D2D9EE",
          "borderRadius": 10,
          "borderWidth": 0.5,
          "height": 20,
          "width": 20,
        },
      ]
    }
  />
</View>
`;
